--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "FiLaro",
     "short_name": "FiLaro",
-    "description": "FiLaro - A fun Filipino word game with two modes: SaliScramble and WikaBlanks!",
+    "description": "FiLaro: Word and Vocabulary Minigames: SaliScramble and WikaBlanks!",
     "start_url": "index.html",
     "display": "standalone",
     "background_color": "#f2f2f2",
@@ -13,37 +13,37 @@
             "type": "image/png"
         },
         {
-            "src": "icons/icon-72x72.png",
+            "src": "icons/72.png",
             "sizes": "72x72",
             "type": "image/png"
         },
         {
-            "src": "icons/icon-96x96.png",
+            "src": "icons/96.png",
             "sizes": "96x96",
             "type": "image/png"
         },
         {
-            "src": "icons/icon-128x128.png",
+            "src": "icons/128.png",
             "sizes": "128x128",
             "type": "image/png"
         },
         {
-            "src": "icons/icon-144x144.png",
+            "src": "icons/144.png",
             "sizes": "144x144",
             "type": "image/png"
         },
         {
-            "src": "icons/icon-152x152.png",
+            "src": "icons/152.png",
             "sizes": "152x152",
             "type": "image/png"
         },
         {
-            "src": "icons/icon-192x192.png",
+            "src": "icons/filaro192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "icons/icon-512x512.png",
+            "src": "icons/filaro512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
