--- a/manifest.json
+++ b/manifest.json
@@ -2,48 +2,48 @@
     "name": "FiLaro",
     "short_name": "FiLaro",
     "description": "FiLaro: Word and Vocabulary Minigames: SaliScramble and WikaBlanks!",
-    "start_url": "index.html",
+    "start_url": "/index.html",
     "display": "standalone",
     "background_color": "#f2f2f2",
     "theme_color": "#333",
     "icons": [
         {
-            "src": "icons/icon-48x48.png",
+            "src": "/icons/icon-48x48.png",
             "sizes": "48x48",
             "type": "image/png"
         },
         {
-            "src": "icons/72.png",
+            "src": "/icons/72.png",
             "sizes": "72x72",
             "type": "image/png"
         },
         {
-            "src": "icons/96.png",
+            "src": "/icons/96.png",
             "sizes": "96x96",
             "type": "image/png"
         },
         {
-            "src": "icons/128.png",
+            "src": "/icons/128.png",
             "sizes": "128x128",
             "type": "image/png"
         },
         {
-            "src": "icons/144.png",
+            "src": "/icons/144.png",
             "sizes": "144x144",
             "type": "image/png"
         },
         {
-            "src": "icons/152.png",
+            "src": "/icons/152.png",
             "sizes": "152x152",
             "type": "image/png"
         },
         {
-            "src": "icons/filaro192.png",
+            "src": "/icons/filaro192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "icons/filaro512.png",
+            "src": "/icons/filaro512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
